k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-container
        image: nidhishbhimrajka/fair-rent-split:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: instance-volume
          mountPath: /app/instance
      volumes:
      - name: instance-volume
        persistentVolumeClaim:
          claimName: my-app-pvc
